Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(Number var)
    end
end
